# aerofoil-util

./: .gitignore  LICENSE  README.md  pyproject.toml
aero/: Aerofoil1000_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1000_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1000_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1001_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1001_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1001_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1002_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1002_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1002_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1003_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1003_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1003_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1004_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1004_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1004_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1005_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1005_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1005_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1006_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1006_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1006_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1007_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1007_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1007_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1008_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1008_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1008_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1009_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1009_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1009_T1_Re0.200_M0.00_N5.0.csv  Aerofoil100_T1_Re0.500_M0.00_N5.0.txt  Aerofoil1010_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1010_T1_Re0.147_M0.00_N5.0.csv  Aerofoil1010_T1_Re0.200_M0.00_N5.0.csv  Aerofoil1011_T1_Re0.103_M0.00_N5.0.csv  Aerofoil1011_T1_Re0.147_M0.00_N5.0.csv  (+4342 more)
(+43 files in other folders)
